--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Photo Stream</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <base href="./" target="_blank">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
